--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
 			<button class="button">Сгенерировать колоду</button>
 		</div>
 		<div class="wrapper__mysthic-card-field mysthic-card-field">
-			<div class="mysthic-card-field__card-list">
+			<div class="mysthic-card-field__card-number-list">
 				1 Этап
 				<div class="mysthic-card-field__card-number">
-					<div class="mysthic-card-field__card card-green" data-id="0" data-color="green">1</div>
-					<div class="mysthic-card-field__card card-yellow" data-id="0" data-color="brown">2</div>
-					<div class="mysthic-card-field__card card-blue" data-id="0" data-color="blue">3</div>
+					<div class="mysthic-card-field__card-counter card-green" data-id="0" data-color="green">1</div>
+					<div class="mysthic-card-field__card-counter card-yellow" data-id="0" data-color="brown">2</div>
+					<div class="mysthic-card-field__card-counter card-blue" data-id="0" data-color="blue">3</div>
 				</div>
 				2 Этап
 				<div class="mysthic-card-field__card-number">
-					<div class="mysthic-card-field__card card-green" data-id="1" data-color="green"></div>
-					<div class="mysthic-card-field__card card-yellow" data-id="1" data-color="brown"></div>
-					<div class="mysthic-card-field__card card-blue" data-id="1" data-color="blue"></div>
+					<div class="mysthic-card-field__card-counter card-green" data-id="1" data-color="green"></div>
+					<div class="mysthic-card-field__card-counter card-yellow" data-id="1" data-color="brown"></div>
+					<div class="mysthic-card-field__card-counter card-blue" data-id="1" data-color="blue"></div>
 				</div>
 				3 Этап
 				<div class="mysthic-card-field__card-number">
-					<div class="mysthic-card-field__card card-green" data-id="2" data-color="green"></div>
-					<div class="mysthic-card-field__card card-yellow" data-id="2" data-color="brown"></div>
-					<div class="mysthic-card-field__card card-blue" data-id="2" data-color="blue"></div>
+					<div class="mysthic-card-field__card-counter card-green" data-id="2" data-color="green"></div>
+					<div class="mysthic-card-field__card-counter card-yellow" data-id="2" data-color="brown"></div>
+					<div class="mysthic-card-field__card-counter card-blue" data-id="2" data-color="blue"></div>
 				</div>
+			</div>
+			<div class="mysthic-card-field__card-field">
+				<img hidden src="./assets/mythicCardBackground.png" alt="card-closed" class="mysthic-card-field__card card-closed">
+				<img hidden src="#" alt="card-closed" class="mysthic-card-field__card card-opened">
 			</div>
 		</div>
 	</div>
